--- a/.github/workflows/fetch_unlock_records.yml
+++ b/.github/workflows/fetch_unlock_records.yml
@@ -3,6 +3,8 @@ on:
   schedule:
     - cron: '0 7 * * *'
   workflow_dispatch:
+permissions:
+  contents: write
 jobs:
   fetch_records:
     runs-on: ubuntu-latest
