--- a/.github/workflows/fetch_unlock_records.yml
+++ b/.github/workflows/fetch_unlock_records.yml
@@ -28,4 +28,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add unlock_records.csv
+          git pull --rebase origin main
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update unlock_records.csv" && git push origin main)
